# DiffHand

./: .gitignore  .gitmodules  LICENSE  README.md  environment.yml
assets/: double_pendulum.xml  finger_mesh.xml  finger_push.xml  finger_torque.xml  free-form_gripper.xml  free-form_gripper_new.xml  hand_cube.xml  hand_sphere.xml  pendulum.xml  rss_finger_flip.xml  rss_finger_reach.xml  rss_finger_rotate.xml  rss_two_finger_assemble.xml
assets/tactile_pad/: tactile_pad.xml
core/: CMakeLists.txt  output_build.txt  setup.py
core/projects/test_opengl_viewer/: CMakeLists.txt
core/projects/test_opengl_viewer/src/: checkerboard.cpp  point_light_shadow.cpp  test_opengl_viewer.cpp
docker/: Dockerfile  README.md  docker_build.py  install_diffhand.sh  install_py_packages.sh  install_python_3_7.sh
examples/: common.py  grad_free_util.py  test_finger_flick_optimize.py  test_redmax.py  test_tactile_sim.py
examples/DiffHand/: common.py  grad_free_util.py
examples/rss_assemble/: demo.sh  example_assemble.py  grad_free.py  parameterization.py  parameterization_torch.py  run_batch_experiments.py
examples/rss_finger_flip/: demo.sh  example_finger_flip.py  grad_free.py  parameterization.py  parameterization_torch.py  run_batch_experiments.py
examples/rss_finger_reach/: example_finger_reach.py  grad_free.py  parameterization.py  parameterization_torch.py  run_batch_experiments.py
examples/rss_finger_rotate/: example_finger_rotate.py  grad_free.py  parameterization.py  parameterization_torch.py  run_batch_experiments.py
examples/utils/: common.py  renderer.py
(+124 files in other folders)
